--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    padding: 80px;
+    padding: 15%;
 }
 
 img {
@@ -112,7 +112,7 @@ img {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    padding: 80px;
+    padding: 15%;
 }
 
 
@@ -129,13 +129,15 @@ img {
 
 @media screen and (max-width: 399px) {
     .mai {
-        display: grid;
+        /*display: grid;*/
+        display: block;
         grid-column: 1/4;
         grid-row: 1/3;
     }
 
     .text {
-        display: grid;
+        /*display: grid;*/
+        display: block;
         grid-column: 1/3;
         grid-row: 1/3;
     }
